--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "express-partials": "^0.3.0",
     "method-override": "^2.3.8",
     "morgan": "~1.7.0",
-    "serve-favicon": "~2.3.2"
+    "sequelize": "^3.30.4",
+    "serve-favicon": "~2.3.2",
+    "sqlite3": "^3.1.8"
   }
 }
