--- a/package.json
+++ b/package.json
@@ -20,8 +20,12 @@
     "express-session": "^1.15.1",
     "method-override": "^2.3.8",
     "morgan": "~1.7.0",
+    "pg": "^6.1.5",
+    "pg-hstore": "^2.3.2",
     "sequelize": "^3.30.4",
-    "serve-favicon": "~2.3.2",
+    "serve-favicon": "~2.3.2"
+  },
+  "devDependencies": {
     "sqlite3": "^3.1.8"
   }
 }
