--- a/package.json
+++ b/package.json
@@ -3,11 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www",
-    "migrate_local": "./node_modules/.bin/sequelize db:migrate --url sqlite://$(pwd)/quiz.sqlite",
-    "seed_local": "./node_modules/.bin/sequelize db:seed:all --url sqlite://$(pwd)/quiz.sqlite",
-    "migrate_heroku": "heroku run ./node_modules/.bin/sequelize db:migrate --url \\$DATABASE_URL",
-    "seed_heroku": "heroku run ./node_modules/.bin/sequelize db:seed:all --url \\$DATABASE_URL"
+    "start": "node ./bin/www"
   },
   "engines": {
     "node": "6.8.x",
@@ -19,18 +15,8 @@
     "debug": "~2.6.0",
     "ejs": "~2.5.5",
     "express": "~4.14.1",
-    "express-flash": "0.0.2",
     "express-partials": "^0.3.0",
-    "express-session": "^1.15.1",
-    "method-override": "^2.3.8",
     "morgan": "~1.7.0",
-    "pg": "^6.1.5",
-    "pg-hstore": "^2.3.2",
-    "sequelize": "^3.30.4",
-    "sequelize-cli": "^2.6.0",
     "serve-favicon": "~2.3.2"
-  },
-  "devDependencies": {
-    "sqlite3": "^3.1.8"
   }
 }
